# findik

./: Makefile.am  ProjectHome.md  configuration.cpp  configure.in  connection.cpp  connection.hpp  dbmanager.hpp  request_filter.cpp  request_filter_factory_impl.hpp  response_filter.cpp  response_filter.hpp  schema.sql  server.cpp  server.hpp
branches/0.1/: configure.in
branches/0.1/conf/: findik.cfg
branches/0.1/src/include/authenticator/: authentication_result.hpp
branches/0.1/src/include/protocols/http/: domain_re_filter.hpp  file_ext_filter.hpp  html_content_filter.hpp  request_parser.hpp  url_filter.hpp  url_re_filter.hpp
branches/0.1/src/include/service/: pcre_service.hpp
branches/0.1/src/include/util/: pcre_analyzer.hpp
branches/0.1/src/main/: Makefile.am
branches/0.1/src/main/io/: Makefile.am
branches/0.1/src/main/protocols/http/: Makefile.am  data.cpp  http_session_manager.cpp  request_parser.cpp  response_parser.cpp  url_filter.cpp
branches/0.1/src/main/service/: reply_service.cpp  service_container.cpp  session_service.cpp
branches/0.1/src/test/: Makefile.am
conf/: findik.cfg  findik_log.conf
playground/barfan/0.0.2-DEV-03/src/filter/: Makefile.am  abstract_response_filter.cpp  abstract_response_filter.hpp  content_response_filter.cpp  content_response_filter.hpp  request_filter_factory_impl.cpp  request_filter_factory_impl.hpp  response_filter.cpp  response_filter.hpp  response_filter_factory_impl.cpp  response_filter_factory_impl.hpp  url_request_filter.cpp
playground/barfan/0.0.2-DEV-07/src/filter/: Makefile.am  abstract_request_filter.hpp  abstract_response_filter.hpp  content_response_filter.cpp  content_response_filter.hpp  domain_pcre_request_filter.cpp  domain_pcre_request_filter.hpp  domain_request_filter.cpp  domain_request_filter.hpp  filter_report.cpp  filter_report.hpp  request_filter.hpp  request_filter_factory_impl.cpp  request_filter_factory_impl.hpp  response_filter.hpp  url_pcre_request_filter.cpp  url_pcre_request_filter.hpp  url_request_filter.cpp  url_request_filter.hpp
playground/barfan/0.0.2-DEV-07/src/parser/: Makefile.am  html_parser.hpp  magic_number_parser.cpp  magic_number_parser.hpp  pcre_parser.cpp  pcre_parser.hpp  tidy_html_parser.cpp  tidy_html_parser.hpp
playground/barfan/0.0.2-DEV-07/src/persistency/: Makefile.am  dbmanager.hpp  mysqldbmanager.cpp  mysqldbmanager.hpp
playground/barfan/0.1-03/src/main/config/: Makefile.am
playground/barfan/0.1-06/src/main/util/: Makefile.am
playground/barfan/0.2-07/: configure.in
playground/barfan/0.2-07/src/include/persistency/: mysqldbmanager.hpp
playground/barfan/0.2-07/src/include/util/: tidy_html_parser.hpp  tidyx.hpp
playground/barfan/0.2-07/src/main/: Makefile.am  findik.cpp
playground/barfan/0.2-07/src/main/config/: Makefile.am  configuration_object.cpp
playground/barfan/0.2-07/src/main/io/: Makefile.am
playground/barfan/0.2-07/src/main/logging/: log_initializer.cpp
playground/barfan/0.2-07/src/main/persistency/: Makefile.am  mysqldbmanager.cpp
playground/barfan/0.2-07/src/main/service/: Makefile.am
playground/barfan/0.2-07/src/main/util/: Makefile.am  pcre_parser.cpp  tidy_html_parser.cpp
playground/barfan/0.2-07/src/test/: Makefile.am
playground/haydum/0.0.1-DEV/: abstract_request_filter.cpp  configure.in  domain_request_filter.cpp  response_filter.hpp  url_request_filter.cpp
playground/haydum/0.0.1-DEV/src/: Makefile.am  abstract_request_filter.hpp  connection.hpp  filter_report.hpp  findik.cpp  html_parser.hpp  pooled_dbmanager.hpp  request_filter.cpp  request_filter_factory_impl.hpp
playground/haydum/0.0.1-DEV/src/config/: Makefile.am  configuration.hpp
playground/haydum/0.0.1-DEV/src/filter/: domain_request_filter.hpp  request_filter_factory_impl.cpp  url_request_filter.hpp
playground/ktysnl/0.0.2-DEV-01/: configure.in
playground/ktysnl/0.0.2-DEV-01/src/: Makefile.am
playground/ktysnl/0.0.2-DEV-01/src/filter/: response_filter_factory_impl.hpp
playground/ktysnl/0.0.2-DEV-01/src/io/: connection.cpp  header.hpp  mime_types.hpp  parser_util.hpp  reply.hpp  request.hpp  request_parser.cpp  response_parser.cpp  response_parser.hpp  zlib_util.hpp
playground/ktysnl/0.0.2-DEV-01/src/urlblacklistimporter/: Makefile.am  configure.in  importer_tool.cpp  importer_tool.hpp  main.cpp
playground/shelta/0.0.1-DEV-03/: autogen.sh  configure.in
playground/shelta/0.0.1-DEV-03/src/: Makefile.am  dbconnection.cpp
playground/shelta/0.0.1-DEV-03/src/config/: Makefile.am
playground/shelta/0.0.1-DEV-03/src/filter/: Makefile.am  abstract_request_filter.cpp  domain_request_filter.cpp  domain_request_filter.hpp  filter_report.hpp  request_filter.hpp  url_request_filter.cpp  url_request_filter.hpp
playground/shelta/0.0.1-DEV-03/src/io/: Makefile.am  connection.hpp  parser_util.hpp
playground/shelta/0.0.1-DEV-03/src/parser/: Makefile.am  mysqldbmanager.hpp
playground/shelta/0.0.1-DEV-03/src/persistency/: Makefile.am  dbconnection.cpp  dbconnection.hpp  mysqldbmanager.hpp  pooled_dbmanager.hpp
playground/shelta/0.2-04/conf/: Makefile.am
playground/shelta/findik-abstract-poc-1/src/main/: Makefile.am  findik.cpp
src/main/: Makefile.am  findik.cpp
src/main/config/: configuration_object.cpp
src/main/filter/: Makefile.am
src/main/io/: Makefile.am  connection.cpp  server.cpp  session.cpp  ssl_connection.cpp
src/main/logging/: Makefile.am
src/main/parser/: Makefile.am
src/main/persistency/: mysqldbmanager.cpp
src/main/protocols/http/: Makefile.am  clamd_av_filter.cpp  content_filter_group.cpp  content_mime_filter.cpp  data.cpp  domain_filter.cpp  domain_re_filter.cpp  file_ext_filter.cpp  filetype_filter_group.cpp  html_content_filter.cpp  http_filter_reason_factory.cpp  http_filter_result_generator.cpp  request_parser.cpp  response.cpp  response_parser.cpp  url_filter.cpp  url_re_filter.cpp
src/main/protocols/http/auth_util/: Makefile.am
src/main/service/: Makefile.am  parser_service.cpp  pcre_service.cpp  service_container.cpp
src/main/util/: Makefile.am  base64.cpp  pcre_analyzer.cpp  tidy_html_parser.cpp
(+878 files in other folders)
