# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([findik],[0.0.2],[findikmail@gmail.com])
AC_CONFIG_SRCDIR([src/findik.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_RANLIB
AC_LANG(C++)


DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(ON)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(ON)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN(findik, doxygen.cfg)

AM_INIT_AUTOMAKE

# Checks for libraries.
# ex: AC_CHECK_LIB([name],[break])
AC_CHECK_LIB([pthread],[break])
AC_CHECK_LIB([boost_thread],[break])
AC_CHECK_LIB([boost_system],[break])
AC_CHECK_LIB([log4cxx],[break])
AC_CHECK_LIB([config++],[break])
AC_CHECK_LIB([z],[break])
AC_CHECK_LIB([tidy],[break])
AC_CHECK_LIB([mysqlcppconn],[break])

# Checks for header files.
AC_CHECK_HEADER([pthread.h],[break])
AC_CHECK_HEADER([boost/asio.hpp],[break])
AC_CHECK_HEADER([boost/array.hpp],[break])
AC_CHECK_HEADER([boost/shared_ptr.hpp],[break])
AC_CHECK_HEADER([boost/bind.hpp],[break])
AC_CHECK_HEADER([boost/function.hpp],[break])
AC_CHECK_HEADER([boost/lexical_cast.hpp],[break])
AC_CHECK_HEADER([boost/logic/tribool.hpp],[break])
AC_CHECK_HEADER([boost/foreach.hpp],[break])
AC_CHECK_HEADER([boost/noncopyable.hpp],[break])
AC_CHECK_HEADER([boost/tuple/tuple.hpp],[break])
AC_CHECK_HEADER([boost/thread.hpp],[break])

AC_CHECK_HEADER([buffio.h],[break])
AC_CHECK_HEADER([cppconn/driver.h],[break])
AC_CHECK_HEADER([libconfig.h++],[break])
AC_CHECK_HEADER([mysql_connection.h],[break])
AC_CHECK_HEADER([tidy.h],[break])
AC_CHECK_HEADER([zlib.h],[break])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	src/config/Makefile
	src/filter/Makefile
	src/io/Makefile
	src/logging/Makefile
	src/parser/Makefile
	src/persistency/Makefile
	src/urlblacklistimporter/Makefile
])

# Checks for library functions.
AC_OUTPUT
