# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(findik, [0.0.1], [buggeroff@foo.org])
AC_CONFIG_SRCDIR([src/findik.cpp])
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB
AC_LANG(C++)

# Checks for libraries.
BOOST_THREAD_EXISTS=""
AC_HAVE_LIBRARY([boost_thread],,BOOST_THREAD_EXISTS="no")
if test "$BOOST_THREAD_EXISTS" == "no"; then
	echo "
*******************************
 boost_thread does not exist!
*******************************
"
	exit 1
fi

AC_HAVE_LIBRARY([zlib],[break])
AC_HAVE_LIBRARY([tidy],[break])

# Checks for header files.
AC_CHECK_HEADER([pthread.h],[break])
AC_CHECK_HEADER([boost/asio.hpp],[break])
AC_CHECK_HEADER([boost/array.hpp],[break])
AC_CHECK_HEADER([boost/shared_ptr.hpp],[break])
AC_CHECK_HEADER([boost/bind.hpp],[break])
AC_CHECK_HEADER([boost/function.hpp],[break])
AC_CHECK_HEADER([boost/lexical_cast.hpp],[break])
AC_CHECK_HEADER([boost/logic/tribool.hpp],[break])
AC_CHECK_HEADER([boost/foreach.hpp],[break])
AC_CHECK_HEADER([boost/noncopyable.hpp],[break])
AC_CHECK_HEADER([boost/tuple/tuple.hpp],[break])
AC_CHECK_HEADER([boost/thread.hpp],[break])

AC_CHECK_HEADER([buffio.h],[break])
AC_CHECK_HEADER([cppconn/driver.h],[break])
AC_CHECK_HEADER([libconfig.h++],[break])
AC_CHECK_HEADER([mysql_connection.h],[break])
AC_CHECK_HEADER([tidy.h],[break])
AC_CHECK_HEADER([zlib.h],[break])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	src/config/Makefile
])

# Checks for library functions.
AC_OUTPUT
