noinst_LIBRARIES=libfindik_io.a

libfindik_io_a_SOURCES= \
	connection.cpp \
	mime_types.cpp \
	reply.cpp \
	request.cpp \
	request_parser.cpp \
	response.cpp \
	response_parser.cpp \
	server.cpp

INCLUDES = \
        -I@top_srcdir@/src/config \
        -I@top_srcdir@/src/filter \
        -I@top_srcdir@/src/logging \
        -I@top_srcdir@/src/parser \
        -I@top_srcdir@/src/persistency
