noinst_LTLIBRARIES		=	libfindik_filter.la

libfindik_filter_la_SOURCES	= \
	filter_reason.cpp

libfindik_filter_la_LIBADD	=	@LTLIBOBJS@

INCLUDES 			= \
        -I@top_srcdir@/src/main/config \
        -I@top_srcdir@/src/main/io \
        -I@top_srcdir@/src/main/logging \
        -I@top_srcdir@/src/main/parser \
        -I@top_srcdir@/src/main/service

