noinst_LTLIBRARIES		=	libfindik_io.la

libfindik_io_la_SOURCES		= \
	abstract_data.cpp \
	connection.cpp \
	server.cpp \
	session.cpp

libfindik_io_la_LIBADD		=	@LTLIBOBJS@

INCLUDES 			= \
        -I@top_srcdir@/src/main/config \
        -I@top_srcdir@/src/main/filter \
        -I@top_srcdir@/src/main/parser \
        -I@top_srcdir@/src/main/service

